@@ -183,6 +183,20 @@ module Spec
       def configure
         yield configuration
       end
+      
+      def register_at_exit_hook # :nodoc:
+        $spec_runner_at_exit_hook_registered ||= nil
+        unless $spec_runner_at_exit_hook_registered
+          at_exit do
+            unless $! || Spec.run?; \
+              success = Spec.run; \
+              exit success if Spec.exit?; \
+            end
+          end
+          $spec_runner_at_exit_hook_registered = true
+        end
+      end
+      
     end
   end
 end
